# Optical_Simulation

./: CMakeLists.txt  NEMO3_OpticalSimSteppingAction.cc  README.md  SN_OpticalSim.cc  SN_OpticalSimGeometry_5inchesMW.cc  SN_OpticalSimGeometry_8inchesMW_test.cc  SN_OpticalSimGeometry_N3DC_8inch.cc  SN_OpticalSimGeometry_N3EC.cc  SN_OpticalSimGeometry_SNXW.cc  SN_OpticalSimPhysics.cc  SN_OpticalSimSteppingAction.cc  SN_OpticalSimTrackInformation.cc  cmake_build_command.sh
include/: Coupling.hh  PMT.hh  SN_OpticalSimCaloMap.hh  SN_OpticalSimCaloMap.hh~  SN_OpticalSimEventAction.hh  SN_OpticalSimEventAction.hh~  SN_OpticalSimGeometry.hh  SN_OpticalSimMaterials.hh  SN_OpticalSimMaterials.hh~  SN_OpticalSimPhysics.hh  SN_OpticalSimPrimaryGeneratorAction.hh  SN_OpticalSimRunAction.hh  SN_OpticalSimRunAction.hh~  SN_OpticalSimSteppingAction.hh  SN_OpticalSimTrackInformation.hh  SN_OpticalSimTrackingAction.hh  SN_OpticalSimUniformityPMT.hh  SN_OpticalSimUniformityPMT.hh~  SN_OpticalSimVisManager.hh  Scintillator.hh  Scintillator.hh~
simulation_input_files/: 204_spectrum.txt  AU_GA0154_TH2.root  AU_GA0154_xaxis.root  AU_GA0154_yaxis.root  AU_GA0494_TH2.root  AU_GA0494_xaxis.root  AU_GA0494_yaxis.root  AnodeUnif_ham_GA0154.txt  AnodeUnif_ham_GA0154_yaxis.txt  AnodeUnif_ham_GA0494.txt  AnodeUnif_ham_GA0494_yaxis.txt  BACKUP_Scan.root  CU_GA0494.root  CathodeUnif_ham_GA0124.txt  CathodeUnif_ham_GA0154.txt  CathodeUnif_ham_GA0190.txt  CathodeUnif_ham_GA0192.txt  CathodeUnif_ham_GA0205.txt  CathodeUnif_ham_GA0494.txt  Correction_energie.root
src/: Coupling.cc  N3DC_OpticalSimSteppingAction.cc  N3DC_OpticalSimSteppingAction.cc~  PMT.cc  SN_OpticalSimEventAction.cc  SN_OpticalSimEventAction.cc~  SN_OpticalSimGeometry.cc  SN_OpticalSimGeometry_5inchesMW.cc~  SN_OpticalSimGeometry_8inchesMW.cc  SN_OpticalSimGeometry_8inchesMW_test.cc~  SN_OpticalSimGeometry_N3DC.cc  SN_OpticalSimGeometry_N3DC_8inch.cc~  SN_OpticalSimGeometry_N3EC.cc~  SN_OpticalSimGeometry_N3L4.cc  SN_OpticalSimGeometry_N3L4.cc~  SN_OpticalSimGeometry_SNXW.cc~  SN_OpticalSimMaterials.cc  SN_OpticalSimMaterials.cc~  SN_OpticalSimPhysics.cc~  SN_OpticalSimPrimaryGeneratorAction.cc  SN_OpticalSimRunAction.cc  SN_OpticalSimRunAction.cc~  SN_OpticalSimSteppingAction.cc~  SN_OpticalSimTrackingAction.cc  SN_OpticalSimTrackingAction.cc~  SN_OpticalSimVisManager.cc  Scintillator.cc  Scintillator.cc~
